src/objects/OrganizationPriceBookMember__c.object
<CustomObject>
    <description>this is a junction object between organization and pricebook</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>OrganizationPriceBookMembers</relationshipLabel>
        <relationshipName>OrganizationPriceBookMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriceBookId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>OrganizationPriceBookMembers</relationshipLabel>
        <relationshipName>OrganizationPriceBookMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>OrganizationPriceBookMember</label>
    <nameField>
        <displayFormat>opm-{000000000}</displayFormat>
        <label>OrganizationPriceBookMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrganizationPriceBookMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>